--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
     "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "blog": "git checkout -b \"blog/$(date '+%Y-%m-%d-%H-%M')\""
   },
   "dependencies": {
     "@fontsource/inter": "4.5.2",
