--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "release": "gh pr create --base release -t \"release $(date '+%Y-%m-%d %H:%M')\" --head=master"
   },
   "dependencies": {
+    "@notionhq/client": "^0.4.4",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "canvas-confetti": "^1.5.1",
+    "copy-to-clipboard": "^3.3.2",
+    "next-api-og-image": "^4.3.0",
+    "prism-react-renderer": "^1.2.1",
     "@fontsource/inter": "4.5.2",
     "@mailchimp/mailchimp_marketing": "^3.0.58",
     "@next/bundle-analyzer": "^12.1.4",
@@ -31,6 +37,10 @@
     "preact": "^10.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-canvas-confetti": "^1.3.0",
+    "react-hook-form": "^7.34.2",
+    "react-hot-toast": "^2.3.0",
+    "react-useanimations": "^2.10.0",
     "reading-time": "1.3.0",
     "rehype-autolink-headings": "^6.1.0",
     "rehype-citation": "^0.4.0",
@@ -42,11 +52,13 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "sharp": "^0.28.3",
+    "slugify": "^1.6.5",
     "tailwindcss": "^3.0.23",
     "unist-util-visit": "^4.0.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.1.2",
+    "@types/react": "17.0.2",
     "cross-env": "^7.0.3",
     "dedent": "^0.7.0",
     "eslint": "^7.29.0",
