add notion blog list & detail page

--- a/package.json
+++ b/package.json
@@ -14,30 +14,30 @@
     "release": "gh pr create --base release -t \"release $(date '+%Y-%m-%d %H:%M')\" --head=master"
   },
   "dependencies": {
-    "@notionhq/client": "^0.4.4",
-    "@tailwindcss/line-clamp": "^0.4.0",
-    "canvas-confetti": "^1.5.1",
-    "copy-to-clipboard": "^3.3.2",
-    "next-api-og-image": "^4.3.0",
-    "prism-react-renderer": "^1.2.1",
     "@fontsource/inter": "4.5.2",
     "@mailchimp/mailchimp_marketing": "^3.0.58",
     "@next/bundle-analyzer": "^12.1.4",
+    "@notionhq/client": "^0.4.4",
     "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "10.4.5",
+    "canvas-confetti": "^1.5.1",
+    "copy-to-clipboard": "^3.3.2",
     "esbuild": "^0.13.13",
     "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
     "mdx-bundler": "^8.0.0",
     "next": "12.1.4",
+    "next-api-og-image": "^4.3.0",
     "next-themes": "^0.0.14",
     "postcss": "^8.4.5",
     "preact": "^10.6.2",
+    "prism-react-renderer": "^1.2.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
     "react-canvas-confetti": "^1.3.0",
+    "react-dom": "17.0.2",
     "react-hook-form": "^7.34.2",
     "react-hot-toast": "^2.3.0",
     "react-useanimations": "^2.10.0",
