--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
+    "@vercel/og": "^0.1.0",
     "autoprefixer": "10.4.5",
     "canvas-confetti": "^1.5.1",
     "copy-to-clipboard": "^3.3.2",
@@ -70,7 +71,6 @@
     "inquirer": "^8.1.1",
     "lint-staged": "^11.0.0",
     "next-remote-watch": "^1.0.0",
-    "next-api-og-image": "^4.3.0",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.4",
     "socket.io": "^4.4.0",
