--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
     "mdx-bundler": "^8.0.0",
-    "next": "^12.2.6",
+    "next": "12.1.4",
     "next-themes": "^0.0.14",
     "postcss": "^8.4.5",
     "preact": "^10.6.2",
@@ -74,7 +74,8 @@
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.4",
     "socket.io": "^4.4.0",
-    "socket.io-client": "^4.4.0"
+    "socket.io-client": "^4.4.0",
+    "typescript": "4.9.5"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx)": [
