--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "start": "cross-env SOCKET=true node ./scripts/next-remote-watch.js ./data",
     "dev": "next dev",
-    "build": "next build && node ./scripts/generate-sitemap",
+    "build": "yarn upload-notion-images-to-cloudinary && next build && node ./scripts/generate-sitemap",
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
     "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts",
     "prepare": "husky install",
     "blog": "git checkout -b \"blog/$(date '+%Y-%m-%d-%H-%M')\"",
-    "release": "gh pr create --base release -t \"release $(date '+%Y-%m-%d %H:%M')\" --head=master"
+    "release": "gh pr create --base release -t \"release $(date '+%Y-%m-%d %H:%M')\" --head=master",
+    "postbuild": "upload-notion-images-to-cloudinary"
   },
   "dependencies": {
     "@fontsource/inter": "4.5.2",
@@ -54,7 +55,8 @@
     "sharp": "^0.28.3",
     "slugify": "^1.6.5",
     "tailwindcss": "^3.0.23",
-    "unist-util-visit": "^4.0.0"
+    "unist-util-visit": "^4.0.0",
+    "upload-notion-images-to-cloudinary": "^1.2.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.1.2",
